# TECNIBO-AI-MODEL

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
api/: Dockerfile  README.md  pyproject.toml
api/scripts/: train_and_register.py
api/src/pricing_api/: __init__.py  config.py  db.py  features.py  logging_config.py  main.py  model_registry.py  schemas.py  security.py
api/tests/: conftest.py  test_build_feature_row.py  test_endpoints.py  test_health.py  test_model_registry.py  test_schemas.py  test_security.py
app/: Dockerfile  README.md  pyproject.toml
app/src/pricing_app/: config.py  main.py
app/src/pricing_app/static/: app.js  style.css
app/src/pricing_app/templates/: index.html
app/tests/: test_proxy.py
data/raw/: industrial_pricing_dataset_10000_rows.xlsx
db/: README.md
db/scripts/: import_dataset.py  requirements.txt
db/sql/: 001_init_schema.sql  002_monitoring.sql
docs/: benchmark_services_ia_generative.md  rgpd_registre.md
docs/incidents/: conflits_de_port.md  panne_db_simulee.md
docs/merise/: MCD.md  MPD.md
docs/veille/: README.md
docs/veille/entrees/: 2026-07-08.md
ml/: compare_models.py  data_prep.py  eda.py  pyproject.toml  requirements.txt
ml/scripts/: run_compare_models.py  run_eda.py
ml/src/pricing_ml/: __init__.py  config.py  data.py  evaluate.py  features.py  models.py  plots.py
ml/tests/: test_data.py  test_evaluate.py  test_features.py  test_models.py
monitoring/: README.md
monitoring/grafana/dashboards/: pricing_overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
reports/: model_comparison.csv  model_comparison.md  phase1_analysis.md
