[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-api"
version = "0.1.0"
description = "FastAPI service exposing the industrial article pricing model"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "joblib>=1.3",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["integration: requires a running Postgres test database"]
filterwarnings = [
    # Upstream joblib/NumPy 2.5 interaction, not our code; no fixed joblib
    # release exists yet (already on the latest, 1.5.3).
    "ignore:Setting the shape on a NumPy array has been deprecated.*:DeprecationWarning:joblib.numpy_pickle",
]
